# industrial-maintainance-copilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20260722_3642e86566a9_add_structured_extraction_artifacts.py  20260722_81f572ea2231_add_document_ingestion_items.py  20260722_a6475f41aece_add_document_processing_artifacts.py  20260722_ac38bbf33d78_create_canonical_data_model.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: base.py  clean_parsed.py  clean_uploads.py  extract_demo_documents.py  extraction_status.py  process_demo_documents.py  seed.py  session.py
apps/api/app/models/: __init__.py  assets.py  compliance.py  constraints.py  documents.py  enums.py  events.py  graph.py  jobs.py  maintenance.py
apps/api/app/repositories/: documents.py  equipment.py  extraction.py  ingestion.py  processing.py
apps/api/app/schemas/: documents.py  equipment.py  extraction.py  health.py  ingestion.py
apps/api/tests/: conftest.py  ingestion_helpers.py  test_chunking.py  test_config.py  test_equipment_api.py  test_equipment_repository.py  test_extraction.py  test_extraction_api.py  test_health.py  test_ingestion_api.py  test_ingestion_repositories.py  test_ingestion_service.py  test_ingestion_storage.py  test_ingestion_validation.py  test_migrations.py  test_models.py  test_parsers.py  test_processing_api.py  test_seed.py
(+42 files in other folders)
