[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maintenance-copilot-api"
version = "0.1.0"
description = "FastAPI backend for the Industrial Maintenance Knowledge Copilot."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "charset-normalizer>=3.4.0,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pillow>=11.0.0,<12.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pymupdf>=1.25.0,<2.0.0",
  "pytesseract>=0.3.13,<1.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "qdrant-client>=1.12.0,<2.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.7.0,<1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["alembic"]
